--- a/dev/sass/app.scss
+++ b/dev/sass/app.scss
@@ -44,7 +44,7 @@
 @import "view.venues";
 @import "view.settings";
 @import "view.venue";
-@import "view.addvenue";
+@import "view.venueedit";
 @import "view.admin";
 
 
