--- a/templates/view.settings.html
+++ b/templates/view.settings.html
@@ -59,6 +59,12 @@
 				ng-model="data.user.noti.remind">
 			<label for="lunch-remind">Remind me when to choose a venue</label>
 		</p>
+		<p>
+			<input type="checkbox" name="lunch-cmts" id="lunch-cmts"
+				ng-change="submitNotifications()"
+				ng-model="data.user.noti.cmts">
+			<label for="lunch-cmts">Notify me about new comments my venue and the venues I commented on</label>
+		</p>
 	</section>
 
 	<section>
