--- a/dev/sass/_ui.header.scss
+++ b/dev/sass/_ui.header.scss
@@ -367,10 +367,10 @@
 	// States
 	&:hover{
 		a {
-			// Skin
-			color: #000;
-			// Effects
-			@include transition-duration( 200ms );
+			background: {
+				color: shade($lunch-clr-red-drk, 10);
+			}
+			@include transition-duration($lunch-time-over);
 		}
 	}
 
@@ -381,6 +381,12 @@
 		color: $lunch-color-white;
 		text-decoration: none;
 		-webkit-font-smoothing: antialiased;
+		background: {
+			color: $lunch-clr-red-drk;
+		}
+
+		@include transition-property(background-color);
+		@include transition-duration($lunch-time-out);
 	}
 
 	.lunch-label {
@@ -470,11 +476,6 @@
 			}
 
 			@include border-radius(2px);
-
-			// Effects
-			@include transition-property( color );
-			@include transition-duration( 1000ms );
-
 		}
 	}
 }
