--- a/dev/sass/_view.settings.scss
+++ b/dev/sass/_view.settings.scss
@@ -74,13 +74,9 @@
 	}
 
 	.lunch-runway {
+		// box
 		padding: 10px 0 10px 0;
 		margin: -30px 0 0 0;
-
-		// skin
-		background: {
-			color: $lunch-clr-white;
-		}
 		border: {
 			width: 0;
 			top-width: 2px;
@@ -88,18 +84,28 @@
 			color: $lunch-clr-grey-xxlgt;
 			style: solid;
 		}
+
+		// skin
+		background: {
+			color: $lunch-clr-white;
+		}
+
 		@include border-radius(2px);
 
 		.lunch-item {
+			// box
+			width: 85px;
+			height: 85px;
+			margin: 0 2px;
+
+			// skin
 			@include border-radius(50%);
 			background: {
 				color: transparent;
 			}
-			width: 85px;
-			height: 85px;
 			&:hover {
 				background: {
-					color: $lunch-clr-grey-xxlgt;
+					color: $lunch-clr-grey-xlgt;
 				}
 			}
 		}
@@ -135,6 +141,9 @@
 			outline: none;
 		}
 		&.lunch-active {
+			background: {
+				color: $lunch-clr-grey-xxlgt;
+			}
 			.lunch-item-active {
 				display: block;
 			}
