refactor(scss): styles to main-content.scss

--- a/dev/sass/_ui.inputs.scss
+++ b/dev/sass/_ui.inputs.scss
@@ -47,7 +47,8 @@ $lunch-color-filter-active: #555;
  */
 textarea,
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="url"] {
 	padding: {
 		top: 12px;
 		bottom: 12px;
