--- a/dev/sass/_view.admin.scss
+++ b/dev/sass/_view.admin.scss
@@ -5,14 +5,18 @@
 
 .lunch-view-admin {
 
-	header {
-		h1 {
-			margin: 48px 0 40px 0;
-		}
-	}
 	input {
 		display: block;
 	}
+
+	.lunch-button {
+		float: right;
+	}
+
+	select {
+		width: 100%;
+	}
+	
 	textarea {
 		display: block;
 		width: 100%;
