--- a/dev/sass/app.scss
+++ b/dev/sass/app.scss
@@ -21,13 +21,14 @@
 @import "util.vars";
 @import "util.typo";
 @import "util.animations";
-@import "util.grid";
+//@import "util.grid";
 
 // UI Elements
 @import "ui.typography";
 @import "ui.header";
 @import "ui.inputs";
 @import "ui.buttons";
+@import "ui.main-content";
 
 // Templates
 @import "tmpl.avatar";
