improve(comments): blue as owner color

--- a/dev/sass/_tmpl.comment.scss
+++ b/dev/sass/_tmpl.comment.scss
@@ -186,7 +186,7 @@ $lunch-comment-body-col: #eee;
 
 		&.lunch-owner {
 			background: {
-				color: $lunch-clr-red-drk;
+				color: $lunch-clr-blue;
 			}
 		}
 	}
@@ -229,7 +229,7 @@ $lunch-comment-body-col: #eee;
 	.lunch-commentator-img {
 		top: 0px;
 		background: {
-			color: $lunch-clr-red-drk;
+			color: $lunch-clr-blue;
 		}
 	}
 
