--- a/dev/sass/_util.vars.scss
+++ b/dev/sass/_util.vars.scss
@@ -14,11 +14,15 @@ $lunch-color-ylw: #FFEC88;
 $lunch-color-ylw-dark: #FFD600;
 $lunch-color-ylw-ligh: #FFFCEA;
 
+$lunch-clr-white: #fff;
+
 $lunch-clr-grey-xxlgt: #f7f7f7;
 $lunch-clr-grey-xlgt: #eee;
 $lunch-clr-grey-lgt: #ddd;
 $lunch-clr-grey: #999;
 $lunch-clr-grey-drk: #666;
+
+$lunch-clr-black: #111;
 
 $lunch-clr-blue: #00B9E7;
 $lunch-clr-blue-drk: #0083A3;
@@ -27,8 +31,6 @@ $lunch-clr-red: #FF0046;
 $lunch-clr-red-drk: #C90037;
 
 $lunch-clr-yellow: #FFEC88;
-
-$lunch-clr-white: #fff;
 
 // Timer
 $lunch-time-over: 100ms;
