--- a/templates/view.venuedetail.html
+++ b/templates/view.venuedetail.html
@@ -1,14 +1,16 @@
 <main class="lunch-view-venue lunch-animate">
 
 	<header>
-		<a ng-click="back()" class="lunch-fn-back">
+		<a ng-click="back()" id="lunch-fn-back">
 			<span class="lunch-icon">B</span>
 			<span class="lunch-label">back</span>
 		</a>
+		<!--
 		<a ng-click="edit(venue._id)" class="lunch-fn-edit">
 			<span class="lunch-icon">E</span>
 			<span class="lunch-label">edit</span>
 		</a>
+		-->
 		<h1>{{venue.name}}</h1>
 	</header>
 
