--- a/templates/view.admin.html
+++ b/templates/view.admin.html
@@ -24,5 +24,5 @@
 	<pre ng-bind="response"></pre>
 
 	<h2>Editor</h2>
-	<textarea ng-model="model.eventData" ng-allow-tab id="lunch-json-interface"></textarea>
+	<textarea></textarea>
 </main>
