--- a/templates/tmpl.navi.html
+++ b/templates/tmpl.navi.html
@@ -1,9 +1,9 @@
 <nav class="lunch-nav">
 
-	<div class="lunch-account">
+	<a class="lunch-account" href="#/settings/self">
 		<img src="{{user.ava}}" alt="" class="lunch-account-image">
 		<div class="lunch-account-name">{{user.nick}}</div>
-	</div>
+	</a>
 
 	<ul class="lunch-nav-list">
 		<li class="lunch-nav-elem lunch-fn-venues">
