landing page ref fixes

--- a/templates/page.login.html
+++ b/templates/page.login.html
@@ -10,10 +10,14 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
 
-		<link rel="stylesheet" href="../static/css/screen.css">
+		<!-- Style -->
+		<link rel="stylesheet" href="../static/css/app.css">
 		<link rel="icon" href="../static/img/favicon.ico" type="image/x-icon"/>
 		
-		<script src="../static/js/vendor/modernizr-2.6.2.min.js"></script>
+		<!-- Type kit -->
+		<script type="text/javascript" src="//use.typekit.net/tjo7bse.js"></script>
+		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+		
 	</head>
 	<body class="lunch-page-login">
 	
