added invite link

--- a/templates/view.venuedetail.html
+++ b/templates/view.venuedetail.html
@@ -28,7 +28,7 @@
 				<span class="lunch-icon">N</span>
 				<span class="lunch-label">Cancel</span>
 			</a>
-			<a class="lunch-fn-invite">
+			<a class="lunch-fn-invite" href="mailto:?subject=Lunchpad%20%2F%20What%20about%20Lunch%20at%20{{venue.name}}%3F&body=Join%20me%20for%20lunch%20at%20{{venue.name}}!%0Ahttp%3A%2F%2Flunchpad.co%2F%23%2Fvenue%2F{{venue._id}}%0A%0A">
 				<span class="lunch-icon">I</span>
 				<span class="lunch-label">Invite</span>
 			</a>
