--- a/templates/mail.comments/style.css
+++ b/templates/mail.comments/style.css
@@ -1,52 +1,28 @@
 body {
 	font-family: sans-serif;
 	font-size: 16px;
-	text-align:center;
 	background-color: #eee;
 }
 
+p {
+	margin: .4em 0;
+	line-height: 1.35em;
+}
 .lunch-mail {
-	padding: 10px;
+	padding: 30px 15px;
 }
 
 .lunch-mail-container {
+	max-width: 500px;
+	padding: 60px 40px;
+	margin: 0 auto;
+	border-radius: 2px;
 	background-color: #fff;
 }
 
 .lunch-mail a {
 	color: #FF0046;
 	text-decoration: none;
-}
-
-.lunch-mail-venue {
-	margin: 1.75em 0;
-}
-
-
-
-.lunch-mail-venue h2 {
-	margin: 0 0 6px 0;
-	text-transform: uppercase;
-	font-size: 20px;
-	font-family: "Impact", sans-serif;
-}
-
-.lunch-mail-venue p {
-	margin-top: 6px;
-	margin-bottom: 10px;
-}
-
-.lunch-mail-venue a {
-	color: #00B9E7;
-}
-
-.lunch-mail-venue h2 a {
-	float: none;
-	color: black;
-}
-
-.lunch-mail-venue h2 a:hover {
-	color: #333;
 }
 
 .lunch-mail-content {
@@ -65,18 +41,78 @@ body {
 	display: inline;
 }
 
-.lunch-mail-container {
-	max-width: 500px;
-	padding: 40px 30px 60px 30px;
-	margin: 0 auto;
+
+/*
+* Venue Mail
+*/
+.lunch-mail-venue {
+	margin: 0;
+	padding: 1.5em 0 1.5em 0;
+	border-bottom: 2px solid #f7f7f7;
+}
+.lunch-mail-venue:first-child {
+	border-top: 2px solid #f7f7f7;
 }
 
+.lunch-mail-venue h2 {
+	margin: 3px 0 1em 0;
+	text-transform: uppercase;
+	font-size: 20px;
+	font-family: "Impact", sans-serif;
+}
+
+.lunch-mail-venue a {
+	background-color: #00B9E7;
+	color: white;
+	float: right;
+	display: block;
+	padding: 7px 10px;
+	border-radius: 2px;
+	font-size: 14px;
+}
+.lunch-mail-venue a:hover {
+	background-color: #0083A3;
+}
+
+
+/*
+* Comment Mail
+*/
+.lunch-mail-content .lunch-mail-comment {
+	display: block;
+	margin: 2.5em 0;
+}
+
+.lunch-mail-commentator {
+	color: #00B9E7;
+	margin: 1em 0 0 50px;
+}
+.lunch-mail-comment-content {
+	margin: 0 0 1em 50px;
+}
+
+.lunch-mail-commentator-img {
+	float: left;
+	height: 40px;
+	height: 40px;
+	margin: -2px 10px 0 0;
+	overflow: hidden;
+
+	background-color: #eee;
+	border-radius: 20px;
+}
+
+
+/*
+* Footer
+*/
 .lunch-mail-footer {
 	max-width: 500px;
-	padding: 40px 30px 20px 30px;
+	padding: 20px 40px 20px 40px;
 	margin: 0 auto;
 	font-size: 12px;
 	color: #bbb;
+	text-align: center;
 }
 
 .lunch-mail-footer a {
@@ -85,5 +121,5 @@ body {
 }
 
 .lunch-mail-footer p {
-	margin-top: 0;
+	margin: 1em 0;
 }
