--- a/dev/sass/_page.login.scss
+++ b/dev/sass/_page.login.scss
@@ -3,200 +3,223 @@
  * @author Markus Riegel <mr@19h13.com>
  */
 
- *{
- 	outline: none;
- }
 
 .lunch-page-login {
- 	height: 100%;
- 	background-color: $lunch-color-red;
+
+	header, .lunch-section-manifesto, footer {
+		padding: {
+			left: 30px;
+			right: 30px;
+		}
+	}
 
 
 
- }
+	h1, h2, p {
+		text-align: center;
+	}
 
-.lunch-logo {
-	padding-top: 40px;
-	display: block;
-	text-align: center;
-	height: 480px;
-	overflow: hidden;
-}
+	header {
 
-.lunch-login-form {
-	margin: 0px auto;
-	width: 250px;
-	//padding: 50px;
-	//background-color: #fff;
+		padding:{
+			bottom: 70px;
+			top: 80px;
+		};
+
+		background:{
+			color: $lunch-clr-red;
+		}
+
+		.lunch-logo {
+			width: 400px;
+			max-width: 100%;
+			margin: auto;
+
+			img {
+				max-width: 100%;
+			}
+		}
+
+		h1 {
+			//display: none;
+			color: $lunch-clr-red-drk;
+
+			margin:{
+				top: 30px;
+				bottom: 0px;
+			};
+
+			font:{
+				size: 40px;
+			}
+		}
+	}
+
+	.lunch-section-manifesto {
+
+		background:{
+			color: $lunch-clr-black;
+		}
+
+		padding:{
+			bottom: 60px;
+			top: 60px;
+		};
+
+		h2, p {
+			a {
+				color: $lunch-clr-white;
+				&:hover {
+					color: $lunch-clr-blue;
+				}
+			}
+		}
+
+		h2 {
+			font: {
+				size: 40px;
+			}
+			margin: {
+				bottom: 5px;
+			}
+		}
+
+	}
 
 
-	.lunch-inp-username,
-	.lunch-inp-password {
-
-		box-sizing: border-box;
-		width: 100%;
+	.lunch-section-login {
 
 		margin: {
-			bottom: 10px;
+			bottom: 110px;
+		};
+
+		form {
+			// border:{
+			// 	color: $lunch-clr-red-drk;
+			// 	width: 2px;
+			// 	style: solid;
+			// };
+			// padding: 15px;
+			// @include border-radius( 2px );
+
+			width: 250px;
+			max-width: 100%;
+			margin: auto;
+
+			.lunch-input-contain {
+				display: block;
+
+				margin: {
+					top: 4px;
+				}
+			}
+
+			.lunch-input-text-label {
+				//color: $lunch-clr-white;
+				padding: {
+					top: 4px;
+				}
+			}
+
+			input[type="text"], input[type="password"] {
+				width: 100%;
+				display: block;
+				border-color: $lunch-clr-grey-lgt;
+
+				// background:{
+				// 	color: $lunch-clr-red-drk;
+				// };
+
+				// &:hover {
+				// 	border-color: $lunch-clr-red-drk;
+				// }
+			}
+
+			
+
+			.lunch-button[type="submit"] {
+				float: right;
+
+				background:{
+					color: $lunch-clr-black;
+				};
+
+				margin: {
+					top: 5px;
+				}
+
+				&:hover {
+					background:{
+						color: #333;
+					};
+				}
+			}
 		}
-		padding: 10px;
-
-
-
-		display: block;
-		//background-color: white;
-		background: none;
-		border: {
-			width: 1px;
-			style: solid;
-			color: $lunch-color-red;
-		}
-
-		color: #000;
-
-
-		&:focus{
-			outline: none;
-
-			//border-color: #ccc;
-			background-color: #fff;
-		}
-
-		background-color: #e0003e;
-
-
-
-		border-radius: 5px;
-
 	}
 
-	input{
-		font: {
-			family: Georgia;
-			style: regular;
-			weight: normal;
-			size: 16px;
-		}
-		text-align: center;
-	}
-
-
-	.lunch-fn-login {
-
-		border: 0;
-
-		display: block;
-
-		//float: left;
-
-		//margin-right: 10px;
-
-		text-align: right;
-
-		padding: 10px 20px;
-		//width: 150px;
-
-		text-decoration: none;
-
-		font: {
-			family: Georgia;
-			//style: italic;
-			//weight: bold;
-		}
-
-		color: white;
-		background: {
-			color: #000;
-		}
-
-		//float: none;
-		width: 70px;
-		height: 70px;
-		//margin: {
-		//	left: 20px;
-		//	right: 0px;
-		//	top: 12px;
-		//}
-		text-align: center;
-		padding: 22px 7px;
-		border-radius: 36px;
-		text-decoration: none;
-		font-family: Georgia;
-
-		//color: $agencycolor;
-		color: #fff;
-
-		margin: auto;
-		margin-top: 30px;
-		@include transition( all 1000ms );
-
-		&:hover {
-
-			background-color: #222;
-			@include transition( all 200ms );
-		}
-
-
-	}
-
-	.lunch-inp-label{
-
-		color: #fff;
-
-		font: {
-			family: Arial;
-			size: 12px;
-		}
-
-		text-transform: uppercase;
-
-		text-align: center;
-		display: block;
-		margin-bottom: 8px;
-
-		//display: none;
-
-	}
 }
 
-.lunch-footer {
-	ul{
-		margin: 0;
-		padding: 0;
-	}
-	li{
-		list-style: none;
-		display: inline;
-		padding:{
-			left: 15px;
-			right: 15px;
+
+.lunch-page-login, .lunch-page-manifesto {
+
+	footer {
+		border: {
+			top: {
+				color: $lunch-clr-grey-lgt;
+				width: 1px;
+				style: solid;
+			};
+		};
+
+		margin: {
+			bottom: 50px;
+		};
+
+		nav {
+			text-align: center;
+			ul {
+
+				padding:{
+					left: 0px;
+				};
+
+				li {
+					display: inline;
+
+					padding: {
+						left: 10px;
+						right: 10px;
+					};
+
+					line-height: 1.5em;
+
+					color: $lunch-clr-grey;
+
+					a {
+						&:hover {
+							color: $lunch-clr-black;
+						}
+					}
+				}
+			}
 		}
-
-		color: #fff;
-
-		font: {
-			family: Georgia;
-			style: regular;
-			weight: normal;
-			size: 16px;
-		}
-	}
-	a{
-		text-decoration: none;
-		color: #fff;
-
-		@include transition( color 1000ms );
-
-		&:hover{
-			color: #000;
-			@include transition( color 200ms );
-		}
 	}
 
+}
 
 
-	position: absolute;
-	bottom: 40px;
-	width: 100%;
-	text-align: center;
+
+@media screen and (min-width: 900px){
+
+	.lunch-page-login {
+
+		.lunch-section-manifesto {
+			background: {
+				image: image-url("manifesto-bg.jpg");
+				position: center center;
+				size: cover;
+				//attachment: fixed;
+			}
+		}
+	}
 }
