--- a/templates/page.manifesto.html
+++ b/templates/page.manifesto.html
@@ -8,7 +8,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>19:13 Lunchpad</title>
 		<meta name="description" content="">
-		<meta name="viewport" content="width=device-width">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link rel="stylesheet" href="../static/css/app.css">
 		<link rel="icon" href="../static/img/favicon.ico" type="image/x-icon"/>
@@ -21,12 +21,13 @@
 	</head>
 	<body class="lunch-page-manifesto">
 	
-		<p>Wir sind ein gutes Steak.<br>Und die Semmel vom Metzger.</p>
-		<p>Wir sind Mittagstisch in großer Runde.<br>Und Spalter mit kleinem Budget.</p>
-		<p>Wir sind Kreation und Beratung.</p>
-		<p>Wir sind ein Team.</p>
-		<p>Wir sind <a href="http://lunchpad.19h13.com" title="19:13 lunchpad">lunchpad.19h13.com</a></p>
-
+		<section class="lunch-section-manifesto">
+			<p>Wir sind ein gutes Steak.<br>Und die Semmel vom Metzger.</p>
+			<p>Wir sind Mittagstisch in großer Runde.<br>Und Spalter mit kleinem Budget.</p>
+			<p>Wir sind Kreation und Beratung.</p>
+			<p>Wir sind ein Team.</p>
+			<p>Wir sind <a href="http://lunchpad.19h13.com" title="19:13 lunchpad">lunchpad.co</a></p>
+		</section>
 
 		<footer class="lunch-footer">
 			<nav>
