improve(mail): better styling of comment mail

--- a/templates/mail.comments/html.ejs
+++ b/templates/mail.comments/html.ejs
@@ -21,7 +21,7 @@
 						<h2><%= venues[i].venue.name %></a></h2>
 						<ul>
 							<% for(var j = 0; j < venues[i].users.length; j++) { %>
-								<li class="lunch-mail-comment">
+								<li class="lunch-comments lunch-mail-comment">
 									<div class="lunch-mail-commentator-img">
 										<img src="<%= venues[i].users[j].ava %>" alt="<%= venues[i].users[j].nick %>">
 									</div>
