--- a/templates/page.app.angular.html
+++ b/templates/page.app.angular.html
@@ -12,6 +12,7 @@
 
 		<!-- Style -->
 		<link rel="stylesheet" href="../static/css/app.css">
+		<link rel="stylesheet" href="../static/css/shepherd-theme-lunchpad.css">
 		<link rel="icon" href="../static/img/favicon.ico" type="image/x-icon"/>
 
 		<!-- Type kit -->
