--- a/templates/tmpl.navi.html
+++ b/templates/tmpl.navi.html
@@ -1,6 +1,6 @@
 <nav class="lunch-nav">
 
-	<a class="lunch-account" href="#/settings/self">
+	<a class="lunch-account" href="#/settings/self" id="navProfileBtn">
 		<img src="{{user.ava}}" alt="" class="lunch-account-image">
 		<div class="lunch-account-name">{{user.nick}}</div>
 	</a>
