--- a/templates/mail.reminder.rising/text.ejs
+++ b/templates/mail.reminder.rising/text.ejs
@@ -1,2 +1,12 @@
-Hello <%= user.nick %>
-Check out the rising venue <%= venue.name %>, added at <%= venue.createdAt %>.
+Hello <%= user.nick %>,
+Check out this venue on www.lunchpad.co!
+
+RISING: <%= venue.name %> (www.lunchpad.co/#/venue/<%= venue._id %>)
+Your colleagues visit this venue with increasing frequency!
+
+Thank you for using lunchpad.
+See you at lunchtime!
+
+
+
+You can always update your email preferences (www.lunchpad.co/#/settings/self).
