--- a/templates/mail.comments/html.ejs
+++ b/templates/mail.comments/html.ejs
@@ -14,14 +14,14 @@
 				<p>Hello <%= user.nick %>,</p>
 				<p>check out the new comments on <a href="http://www.lunchpad.co">lunchpad</a>!</p>
 			</div>
-			<div class="lunch-mail-content">
+			<div class="lunch-mail-content lunch-comments">
 				<% for(var i = 0; i < venues.length; i++) { %>
 					<div class="lunch-mail-venue">
 						<a href="http://www.lunchpad.co/#/venue/<%= venues[i].venue._id %>" class="lunch-cta-btn">view venue</a>
 						<h2><%= venues[i].venue.name %></a></h2>
 						<ul>
 							<% for(var j = 0; j < venues[i].users.length; j++) { %>
-								<li class="lunch-comments lunch-mail-comment">
+								<li class="lunch-mail-comment">
 									<div class="lunch-mail-commentator-img">
 										<img src="<%= venues[i].users[j].ava %>" alt="<%= venues[i].users[j].nick %>">
 									</div>
@@ -44,12 +44,3 @@
 		</div>
 	</body>
 </html>
-
-<!--
-Alle Attribute:
-uid
-unick
-uava
-vid
-vname
--->
