--- a/templates/mail.overview/html.ejs
+++ b/templates/mail.overview/html.ejs
@@ -18,7 +18,7 @@
 				<% for(var i = 0; i < venues.length; i++) { %>
 					<div class="lunch-mail-venue">
 						<a href="http://www.lunchpad.co/#/venue/<%= venues[i].venue._id %>" class="lunch-cta-btn">view venue</a>
-						<h2><%= venues[i].venue.name %></a></h2>
+						<h2><%= venues[i].venue.name %></h2>
 						<ul>
 							<% for(var j = 0; j < venues[i].users.length; j++) { %>
 								<li>
@@ -40,12 +40,3 @@
 		</div>
 	</body>
 </html>
-
-<!--
-Alle Attribute:
-uid
-unick
-uava
-vid
-vname
--->
