--- a/templates/mail.reminder.new/text.ejs
+++ b/templates/mail.reminder.new/text.ejs
@@ -1,2 +1,16 @@
 Hello <%= user.nick %>
 Check out the new venue <%= venue.name %>, added at <%= venue.createdAt %>.
+
+
+Hello <%= user.nick %>,
+Check out this venue on www.lunchpad.co!
+
+NEW: <%= venue.name %> (www.lunchpad.co/#/venue/<%= venue._id %>)
+Added on <%= venue.createdAt %>.
+
+Thank you for using lunchpad.
+See you at lunchtime!
+
+
+
+You can always update your email preferences (www.lunchpad.co/#/settings/self).
