--- a/templates/mail.reminder.top/text.ejs
+++ b/templates/mail.reminder.top/text.ejs
@@ -1,2 +1,12 @@
-Hello <%= user.nick %>
-Check out the top venue <%= venue.name %>, added at <%= venue.createdAt %>.
+Hello <%= user.nick %>,
+Check out this venue on www.lunchpad.co!
+
+TOP VENUE: <%= venue.name %> (www.lunchpad.co/#/venue/<%= venue._id %>)
+This is the most often visited venue of all time.
+
+Thank you for using lunchpad.
+See you at lunchtime!
+
+
+
+You can always update your email preferences (www.lunchpad.co/#/settings/self).
