--- a/templates/mail.reminder.weekday/text.ejs
+++ b/templates/mail.reminder.weekday/text.ejs
@@ -1,2 +1,12 @@
-Hello <%= user.nick %>
-Check out the weekday fav venue <%= venue.name %>, added at <%= venue.createdAt %>.
+Hello <%= user.nick %>,
+Check out this venue on www.lunchpad.co!
+
+TOP VENUE: <%= venue.name %> (www.lunchpad.co/#/venue/<%= venue._id %>)
+A popular choice this time of the week.
+
+Thank you for using lunchpad.
+See you at lunchtime!
+
+
+
+You can always update your email preferences (www.lunchpad.co/#/settings/self).
