improve(mail): wording, order of comments

--- a/templates/mail.reminder.new/html.ejs
+++ b/templates/mail.reminder.new/html.ejs
@@ -19,7 +19,7 @@
 				<img class="lunch-mail-venue-interferer" src="http://www.lunchpad.co/static/img/mail-reminder-new.png" alt="NEW!">
 				<div class="lunch-mail-venue-header">
 					<h2><%= venue.name %></a></h2>
-					<p>Added on <%= venue.createdAt %>.</p>
+					<p>Recently added.</p>
 				</div>
 				<a href="http://www.lunchpad.co/#/venue/<%= venue._id %>" class="lunch-cta-btn">view venue</a>
 			</div>
