--- a/templates/mail.reminder.new/text.ejs
+++ b/templates/mail.reminder.new/text.ejs
@@ -6,7 +6,7 @@ Hello <%= user.nick %>,
 Check out this venue on www.lunchpad.co!
 
 NEW: <%= venue.name %> (www.lunchpad.co/#/venue/<%= venue._id %>)
-Added on <%= venue.createdAt %>.
+Recently added.
 
 Thank you for using lunchpad.
 See you at lunchtime!
