--- a/templates/mail.reminder.weekday/html.ejs
+++ b/templates/mail.reminder.weekday/html.ejs
@@ -19,7 +19,7 @@
 				<img class="lunch-mail-venue-interferer" src="http://www.lunchpad.co/static/img/mail-reminder-popular.png" alt="POPULAR TODAY!">
 				<div class="lunch-mail-venue-header">
 					<h2><%= venue.name %></a></h2>
-					<p>A popular choice this time of the week.</p>
+					<p>A popular choice on this weekday.</p>
 				</div>
 				<a href="http://www.lunchpad.co/#/venue/<%= venue._id %>" class="lunch-cta-btn">view venue</a>
 			</div>
