--- a/templates/mail.reminder.weekday/text.ejs
+++ b/templates/mail.reminder.weekday/text.ejs
@@ -2,7 +2,7 @@ Hello <%= user.nick %>,
 Check out this venue on www.lunchpad.co!
 
 TOP VENUE: <%= venue.name %> (www.lunchpad.co/#/venue/<%= venue._id %>)
-A popular choice this time of the week.
+A popular choice on this weekday.
 
 Thank you for using lunchpad.
 See you at lunchtime!
