--- a/templates/mail.comments/text.ejs
+++ b/templates/mail.comments/text.ejs
@@ -1,7 +1,7 @@
 Hello <%= user.nick %>,
 Check out the new comments on www.lunchpad.co!
 
-<% for(var i = 0; i < venues.length; i++) { %>
+<% for(var i = venues.length-1; i >= 0; i++) { %>
 	<%= venues[i].venue.name %> (www.lunchpad.co/#/venue/<%= venues[i].venue._id %>)
 	<% for(var j = 0; j < venues[i].users.length; j++) { %>
 		<%= venues[i].users[j].nick %>:
